# switrs-courier

./: CPRA-ADVISEMENT.txt  Cargo.toml  README.md  SWITRS-TERMS-OF-USE.txt
src/: error.rs  lib.rs  main.rs
src/gmail/: auth.rs  mod.rs
src/message/: mod.rs
src/message/tests/: i-switrs-email.raw  mod.rs
