[package]
name = "switrs-courier"
version = "0.1.0"
edition = "2021"
authors = ["The Radical Bike Lobby"]
description = "CLI for working with the California I-SWITRS system to retrieve the most recent SWITRS-DB"
readme = "README.md"

keywords = ["telraam"]
homepage = "https://github.com/radical-bike-lobby"
repository = "https://github.com/radical-bike-lobby/switrs-courier"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "switrs_courier"

[[bin]]
name = "switrs-courier"
path = "src/main.rs"
required-features = ["clap"]

[dependencies]
clap = { version = "4.4.11", features = [
    "cargo",
    "derive",
    "env",
], optional = true }
humantime = "2.1.0"
humantime-serde = "1.1.1"
mailparse = "0.14.1"
regex = "1.10.3"
reqwest = { version = "0.11", features = [
    "blocking",
    "json",
    "brotli",
    "deflate",
    "gzip",
    "native-tls",
] }
serde = { version = "1.0", features = ["derive"] }
time = "0.3"
thiserror = "1.0.50"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
non_snake_case = "warn"
non_upper_case_globals = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
unreachable_pub = "warn"

[lints.clippy]
default_trait_access = "warn"
dbg_macro = "warn"
print_stdout = "warn"
unimplemented = "warn"
use_self = "warn"
